--- a/src/css/common.css
+++ b/src/css/common.css
@@ -42,6 +42,12 @@ h1,h2,h3,h4,h5,h6
 {
     background:#eac600f7;
 }
+.common-pre-heading{
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+    font-weight:600;
+    color: 
+}
 .common-heading
 {
     font-size: 60px;
@@ -150,7 +156,7 @@ margin: auto;
 position: fixed;
 top: 0;
 width: 100%;
-background: #0d4469;
+background:rgba(0,0,0,0.85);
 box-shadow: 0 10px 15px rgb(25 25 25 / 10%);
 padding-bottom: 5px;
 z-index: 10;
