--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -36,10 +36,15 @@
 {
     font-size: 50px;
     border: none;
-    padding: 25px 23px;
+   
     border-radius: 50%;
     background-color: #eac600f7;
     color: #fff;
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
 }
 
 .contact-single1 .boxes h3 , .box-2 h3
@@ -54,15 +59,7 @@
     text-align: center;
 }
 
-.contact-single1 .boxes .box-2 i 
-{
-    font-size: 50px;
-    border: none;
-    padding: 23px 30px;
-    border-radius: 50%;
-    background-color: #eac600f7;
-    color: #fff;
-}
+
 
 .contact-single2 .form-movement
 {
