--- a/src/css/register.css
+++ b/src/css/register.css
@@ -4,6 +4,15 @@ a
 {
     text-decoration: none;
 }
+.register-form a:hover {
+    color: #111b69;
+}
+.login-form
+{
+    height:100%;
+    display:flex;
+    align-items: center;
+}
 .actual-form
 {
     border: 2px solid #262626;
@@ -219,3 +228,11 @@ input[type="text"]:focus
 {
     text-align: center;
 }
+/* -----------forget page css----- */
+.forget-back
+{
+    font-size: 12px;
+    color:#111b69;
+    text-transform:uppercase;
+    font-weight:400;
+} 
