--- a/src/css/about.css
+++ b/src/css/about.css
@@ -50,4 +50,84 @@
 {
     text-align: center;
 }
+/* -----common responsive css---- */
+@media only screen and (max-width : 1024px) {
+
+}
+
+@media only screen and (max-width :991px) {
+    
+}
+
+@media only screen and (max-width : 767px) {
+    
+}
+@media only screen and (max-width : 575px) {
+   
+    .actual-form-1
+    {
+     padding: 20px;
+    }
+    .form-wrap {
+        padding: 10px 10px;
+    }
+    .register-form .actual-form-1 input{
+       height: 40px;
+    }
+    .actual-form-1{
+        width: 90%;
+    }
+    .about-single1 .grand-event-left-pic{
+        width: 50%;
+    }
+    .about-single1 .grand-event-right-pic{
+        width:50%;
+        right: 35px;
+    }
+    .about-single1 .grand-event-left-pic img{
+        height:200px;
+    }
+    .about-single1 .grand-event-right-pic img{
+        height:200px;
+    }
+
+}
+
+
+@media only screen and (max-width : 480px) {
+   
+    .register-form .actual-form-1 input{
+        height: 38px;
+     }
+     .actual-form-1{
+         width: 100%;
+     }
+     .common-form-heading{
+         font-size:18px;
+     }
+
+}
+@media only screen and (max-width : 430px){
+    .actual-form-1{
+        padding: 10px;
+    }
+    .form-submit {
+        padding: 3px 30px;
+        font-size: 13px;
+    }
+    
+}
+
+@media only screen and (max-width : 320px) {
+    .common-form-heading{
+        font-size: 15px;
+    }
+    .about-single1 .grand-event-left-pic img{
+        height:170px;
+    }
+    .about-single1 .grand-event-right-pic img{
+        height:170px;
+    }
+}
+
 
