--- a/src/css/common.css
+++ b/src/css/common.css
@@ -298,5 +298,130 @@ background-color:#fff;
 {
     padding: 0 20px;
 }
+  /* -----common responsive css---- */
+  @media only screen and (max-width : 1024px) {
 
+}
+
+@media only screen and (max-width :991px) {
+    
+}
+
+@media only screen and (max-width : 767px) {
+    
+}
+@media only screen and (max-width : 575px) {
+    .common-heading
+    {
+        font-size:24px;
+        font-weight:600;
+    }
+    .common-pre-heading
+    {
+        font-size:11px;
+    }
+    .common-para
+    {
+        font-size:14px;
+    }
+    .common-redirect-banner{
+        padding:100px 0!important;
+    }
+    .common-redirect-banner .common-redirect-banner-title{
+        font-size: 35px!Important;
+    }
+    .navbar-brand img
+    {
+        width:55px;
+    }
+    .navbar-toggler
+    {
+        
+    background-color: #eac600f7!important;
+    padding: 3px 10px!important;
+    }
+    .navbar-toggler:focus
+    {
+        box-shadow:none;
+    }
+    .navbar-toggler-icon
+    {
+        display:flex!important;
+        align-items:center;
+        justify-content: center;
+        color:#fff;
+    }
+    .navbar-nav
+    {
+        background:#212121;
+        border-radius: 5px;
+        padding:20px;
+       
+        display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    position: absolute;
+    right: -11px;
+    height: 100vh;
+    border-radius: 0;
+    margin-top: 12px;
+    width: 50vw;
+    }
+    header .nav-link
+    {
+        font-weight:600;
+        font-size: 14px;
+    }
+    
+    .common-btn, .common-btn-transparent
+    {
+        padding:6px 30px;
+        font-size: 13px;
+    }
+    .navbar-toggler:focus
+    {
+        box-shadow: none!important;
+    }
+    
+
+
+}
+
+
+@media only screen and (max-width : 480px) {
+   
+
+
+}
+@media only screen and (max-width : 430px){
+    .navbar-brand img{
+        width:40px;
+    }
+    .common-heading{
+        font-size: 22px;
+    }
+    
+}
+
+@media only screen and (max-width : 320px) {
+    .common-heading{
+        font-size: 20px;
+    }
+    .navbar-toggler{
+        padding: 0px 5px!important;
+    }
+    .navbar-brand img{
+        width:35px;
+    }
+    header .logo-text
+    {
+        font-size: 18px;
+    }
+    .common-btn, .common-btn-transparent {
+        padding: 4px 18px;
+        font-size: 12px;
+    }
+}
 
