--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -30,6 +30,7 @@
     padding: 40px;
     border-radius: 25px;
     text-align: center;
+    margin: 15px 0;
 }
 
 .contact-single1 .boxes i 
@@ -78,4 +79,52 @@
 .contact-single2 input:focus , .contact-single2 textarea:focus
 {
     box-shadow: inset 0 0 0 1px rgb(0 0 0 / 10%);
+}
+
+/* -----common responsive css---- */
+@media only screen and (max-width : 1024px) {
+
+}
+
+@media only screen and (max-width :991px) {
+    
+}
+
+@media only screen and (max-width : 767px) {
+    
+}
+@media only screen and (max-width : 575px) {
+    .contact-single1 .boxes{
+        margin:20px 30px;
+    }
+    .contact-single1 .boxes i {
+        font-size: 33px;
+        width: 80px;
+        height: 80px;
+        line-height: 80px;
+        text-align: center;
+    }
+
+}
+
+@media only screen and (max-width : 480px) {
+   
+
+
+}
+@media only screen and (max-width : 430px){
+   
+}
+
+@media only screen and (max-width : 320px) {
+    .contact-single1 .boxes{
+        margin: 10px 15px;
+    }
+    .contact-single1 .boxes i {
+        font-size: 26px;
+        width: 65px;
+        height: 65px;
+        line-height: 65px;
+        text-align: center;
+    }
 }
