--- a/src/css/register.css
+++ b/src/css/register.css
@@ -236,3 +236,67 @@ input[type="text"]:focus
     text-transform:uppercase;
     font-weight:400;
 } 
+
+
+/* -----common responsive css---- */
+@media only screen and (max-width : 1024px) {
+
+}
+
+@media only screen and (max-width :991px) {
+    
+}
+
+@media only screen and (max-width : 767px) {
+    
+}
+@media only screen and (max-width : 575px) {
+   
+    .actual-form-1
+    {
+     padding: 20px;
+    }
+    .form-wrap {
+        padding: 10px 10px;
+    }
+    .register-form .actual-form-1 input{
+       height: 40px;
+    }
+    .actual-form-1{
+        width: 90%;
+    }
+
+
+}
+
+
+@media only screen and (max-width : 480px) {
+   
+    .register-form .actual-form-1 input{
+        height: 38px;
+     }
+     .actual-form-1{
+         width: 100%;
+     }
+     .common-form-heading{
+         font-size:18px;
+     }
+
+}
+@media only screen and (max-width : 430px){
+    .actual-form-1{
+        padding: 10px;
+    }
+    .form-submit {
+        padding: 3px 30px;
+        font-size: 13px;
+    }
+    
+}
+
+@media only screen and (max-width : 320px) {
+    .common-form-heading{
+        font-size: 15px;
+    }
+}
+
