--- a/src/css/home.css
+++ b/src/css/home.css
@@ -296,13 +296,14 @@
     width: 140px;
     border-radius: 50%;
     text-align: center;
-    line-height: 140p;
+    
     display: flex;
     align-items: center;
     flex-direction: column;
     margin: 0 -15px;
     justify-content: center;
     opacity: .9;
+    cursor: pointer;
    
 }
 .home-schedule .common-circle .c-heading
@@ -729,6 +730,45 @@ padding: 50px 40px;
 {
     padding-left: 20px;
 }
+
+/* ---------massonary gallery css-------- */
+.grid-wrapper > div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.grid-wrapper > div > img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 5px;
+}
+
+.grid-wrapper {
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-auto-rows: 200px;
+	grid-auto-flow: dense;
+}
+.grid-wrapper .wide {
+	grid-column: span 2;
+}
+.grid-wrapper .tall {
+	grid-row: span 2;
+}
+.grid-wrapper .big {
+	grid-column: span 2;
+	grid-row: span 2;
+}
+
+
+
+
+
+
+
+
 /* -----common responsive css---- */
 @media only screen and (max-width : 1024px) {
 
