--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -88,14 +88,15 @@
 .dash-body .left-part .accordion-button::after
 {
   background-image: url(../images/downward-arrow.png);
-  transform: rotate(0deg)!important;
+  
 }
 .dash-body .left-part .accordion-button:not(.collapsed)::after
 {
   background-image: url(../images/downward-arrow.png);
-  transform: rotate(
--180deg
-)!important;
+ 
+} 
+.dash-body .left-part .accordion-button[aria-expanded="false"]::after{
+  transform: rotate(0deg)!important;
 }
 
 
