--- a/src/css/registred.css
+++ b/src/css/registred.css
@@ -8,3 +8,15 @@
 {
     margin: 0 5px 0 5px;
 }
+.moving-box button
+{
+    border: 2px solid #6366f1;
+    padding: 10px 15px;
+    border-radius: 10px;
+    color: #6366f1;
+}
+.moving-box
+{
+    display: flex;
+    justify-content: flex-end;
+}
