--- a/src/css/home.css
+++ b/src/css/home.css
@@ -162,6 +162,10 @@
     margin-right: 20px;
 }
 
+.react-multiple-carousel__arrow  {
+    z-index: 2!important;
+}
+
 
 /* -------home-counter css-------------- */
 .home-counter
@@ -1108,6 +1112,18 @@ padding: 50px 40px;
         margin: 20px auto;
         box-shadow: 0px 15px 25px rgb(0 4 74 / 4%);
     }
+    .home-register-step ul li{
+        width: auto;
+        height: auto;
+        padding: 20px;
+    }
+    .home-register-step ul li p{
+        margin: 18px 0;
+        font-size: 14px;
+    }
+    .home-register-step ul li .reg-icon-box img{
+        width: 90px;
+    }
 
     /* -------contact area----- */
     .contact-area
@@ -1312,7 +1328,7 @@ padding: 50px 40px;
     }
     .home-register-step ul li
     {
-        height:250px;
+        height:auto;
         margin: 10px ;
     }
     .home-register-step ul li h3
