--- a/src/css/about.css
+++ b/src/css/about.css
@@ -50,6 +50,58 @@
 {
     text-align: center;
 }
+
+.about-doon
+{
+    padding: 60px 0;
+}
+.about-doon .doon-pics img
+{
+    object-fit: cover;
+    width: 100%;
+    height: 130px;
+    border: 2px solid #fff;
+}
+.about-doon-climate .climate-images img
+{
+    object-fit: cover;
+    width: 100%;
+    height: 130px;
+    border: 2px solid #fff;
+}
+.doon-hotels
+{
+    padding-top: 60px;
+}
+.doon-hotels .hotel-details .card img
+{
+    height: 170px;
+    object-fit: cover;
+}
+.doon-hotels .hotel-details .card-body
+{
+    text-align: center;
+}
+.doon-hotels .hotel-details .card-body button
+{
+    font-size: 6px;
+}
+.doon-hotels .hotel-details .card-body h5
+{
+    padding: 20px 0;
+}
+.doon-hotels .hotel-details .card-body a
+{
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+
+
+
+
 /* -----common responsive css---- */
 @media only screen and (max-width : 1024px) {
 
