--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -205,6 +205,40 @@
     color: #6e6e6e;
 }
 
+/* Attendance css */
 
-
-
+.toggle-btn label
+{
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 30px;
+  background: #aaa;
+  border-radius: 30px;
+  transition: all 250ms linear;
+}
+.toggle-btn label::before
+{
+  position: relative;
+  content: "";
+  width: 20px;
+  height: 21px;
+  background: #ddd;
+  display: block;
+  border-radius: 50%;
+  top: 5px;
+  left: 6px;
+  transition: all 250ms linear;
+}
+.toggle-btn input:checked + label
+{
+  background: #00acee;
+}
+.toggle-btn input:checked + label::before
+{
+  left:32px;
+}
+.toggle-btn input
+{
+  display: none;
+}
